--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -415,7 +415,7 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #1E1F29;
+  background-color: #515472;
 }
 
 .header-links li {
@@ -448,7 +448,7 @@ textarea.input {
 #header {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #15161D;
+  background-color: #bec0ca;
 }
 
 .header-logo {
